Update API to use WorkerConfigRequest instead of WorkerConfigResponse raw response
